  (erik, Jeremy Hinegardner, Thibaut Lassalle, ryan)

* LUCENE-2507: Added DirectSolrSpellChecker, which uses Lucene's DirectSpellChecker
  to retrieve correction candidates directly from the term dictionary using
  levenshtein automata.  (rmuir)
   
* SOLR-1873: SolrCloud - added shared/central config and core/shard managment via zookeeper,
  built-in load balancing, and infrastructure for future SolrCloud work. 
  (yonik, Mark Miller)

* SOLR-1729: Evaluation of NOW for date math is done only once per request for
  consistency, and is also propagated to shards in distributed search.
  Adding a parameter NOW=<time_in_ms> to the request will override the
  current time.  (Peter Sturge, yonik)

* SOLR-1566: Transforming documents in the ResponseWriters.  This will allow
  for more complex results in responses and open the door for function queries
  as results. (ryan with patches from grant, noble, cmale, yonik, Jan Høydahl)

* SOLR-2417: Add explain info directly to return documents using ?fl=_explain_ (ryan)

* SOLR-2396: Add CollationField, which is much more efficient than 
  the Solr 3.x CollationKeyFilterFactory, and also supports 
  Locale-sensitive range queries. (rmuir)

* SOLR-2338: Add support for using <similarity/> in a schema's fieldType,
  for customizing scoring on a per-field basis. (hossman, yonik, rmuir)
  
* SOLR-2335: New 'field("...")' function syntax for refering to complex 
  field names (containing whitespace or special characters) in functions.

Optimizations
----------------------

* SOLR-1875: Per-segment field faceting for single valued string fields.
  Enable with facet.method=fcs, control the number of threads used with
  the "threads" local param on the facet.field param.  This algorithm will
  only be faster in the presence of rapid index changes.  (yonik)

* SOLR-1904: When facet.enum.cache.minDf > 0 and the base doc set is a
  SortedIntSet, convert to HashDocSet for better performance. (yonik)
